# sa4stt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
instances/test/other_test_instances/: AustrianSoccer.xml
solver/: CMakeLists.txt  main.cc  stt_basics.cc  stt_basics.hh  stt_constraints.hh  stt_data.cc  stt_data.hh  stt_helpers.cc  stt_helpers.hh
